--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb+srv://sangeetha:biQTPwR0ik2CvLa6@cluster0.09bk9ld.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://sangeetha:vEr05aKuWdC08luU@cluster0.09bk9ld.mongodb.net/?retryWrites=true&w=majority
 PORT=9000
