--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URL=mongodb+srv://sangeetha:vEr05aKuWdC08luU@cluster0.09bk9ld.mongodb.net/?retryWrites=true&w=majority
 PORT=9000
+SECRET_KEY=my_secret_key 
